-v1.1.0 : 'eraser' added , fixed mobile screen

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
     <title>board</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="main.css?name=3">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
@@ -25,12 +25,12 @@
             <div id="s2"></div>
             <div id="s3"></div>
         </section>
-        <!-- <section class="delet">
+        <section class="delet">
             <i class="fa fa-remove" id="icon-rm"></i>
-        </section> -->
+        </section>
         <section class="color"> <input type="color" id="T-color" value="#000000"> </section>
     </aside>
-    <script src="script.js"></script>
+    <script src="script.js?name=4"></script>
 </body>
 
 </html>
