--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
     </canvas>
     <aside id="tools">
         <section class="size">
-            <div id="s1"></div>
-            <div id="s2"></div>
-            <div id="s3"></div>
+            <input type="range" name="" id="input-size" min="1" max="50" value="10">
+            <aside id="aside-range" >
+                10
+            </aside>
         </section>
         <section class="delet">
             <i id="icon-rm">
